# fdict

./: .arch.make  .gitignore  .packit.yaml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Makefile  Makefile.project  README.md  default_settings.bash  dict_funcs_inc.inc  dictionary.F90  dictionary.sh  dictionary_pp.F90  dist.sh  fdict.inc.in  fdict.pc.in  filter.sed  ford_doc.md  funcs_inc.inc  index.html  iso_var_str.f90  log.org  meson.build  pyproject.toml  quick_test.sh  settings.inc  settings.sh  setup.sh  var.F90  var.inc  var.sh  var_funcs_inc.inc  variable.F90  variable_pp.F90
.distro/: .gitignore  fdict.spec
.distro/tests/: rpmlint.fmf  smoke.fmf
.github/workflows/: release.yaml  test.yaml
.travis/: before_install.sh  install.sh  script.sh
arch-makes/: clang.make  gfortran.make  intel.make
cmake/: CMakePresets-CI.json  Config.cmake.in  README  fdictDefaultFlags.cmake  fdictFyppify.cmake  fdictOptions.cmake
config/: CMakeLists.txt  DefaultFlags.cmake  ProjectOptions.cmake  README  autocmake_safeguards.cmake  template.cmake  template.pc
documentation/: index.html  search.html
documentation/interface/: assign.html  assign~2.html  associatd.html  associate.html  associate_type.html  associate~2.html  copy.html  cpack.html  cunpack.html  delete.html  delete~2.html  enc.html  extend.html  hash_coll.html  len.html  llen.html  nullify.html  nullify~2.html  operator( SLASHSLASH ).html  operator(.kv.).html  operator(.kvp.).html  pop.html  print.html  print~2.html  size_enc.html  which.html  which~2.html
documentation/lists/: files.html  modules.html  procedures.html  types.html
documentation/module/: dictionary.html  variable.html
documentation/sourcefile/: dictionary.f90.html  variable.f90.html
documentation/src/: dictionary.f90  variable.f90
documentation/type/: dict.html  dictionary_t.html  var.html  variable_t.html
smeka/: Makefile.clean  Makefile.common  Makefile.compiler  Makefile.cpp  Makefile.default  Makefile.directory  Makefile.dist  Makefile.doc  Makefile.info  Makefile.install  Makefile.library  Makefile.os  Makefile.pkgconfig  Makefile.pp  Makefile.setup  Makefile.smeka  Makefile.test
src/: CMakeLists.txt  Makefile.inc  dict_funcs_inc.inc  dictionary.fypp  dictionary.sh  dictionary_funcs_inc.inc  dictionary_pp.F90  fdict-template.inc  fdict.fypp.in  fdict_common.fypp  fdict_types.fypp  filter.sed  iso_var_str.f90  meson.build  var_funcs_inc.inc  variable.fypp  variable.sh  variable_funcs_inc.inc  variable_pp.F90
test/: Makefile  Makefile.inc  README.md  crt_hash_basis.f90  test1.f90  test_dict.f90  test_dict_long.f90  test_dict_mem.f90  test_dict_mem1.f90  test_dict_mem2.f90  test_dict_remove.f90  test_mem.f90  testd.f90  tests.f90  tst_char.F90  tst_char.f90  tst_dict.F90  tst_dict.f90  tst_dict_a1.F90  tst_dict_a1.f90  tst_dict_a_.F90  tst_dict_a_.f90  tst_dict_dict.F90  tst_dict_dict.f90  tst_dict_hash.f90  tst_dict_long.F90  tst_dict_long.f90  tst_dict_mem1.F90  tst_dict_mem1.f90  tst_dict_mem2.F90  tst_dict_mem2.f90  tst_dict_mem3.F90  tst_dict_mem3.f90  tst_dict_mem4.F90  tst_dict_mem4.f90  tst_dict_mem5.F90  tst_dict_mem5.f90  tst_dict_multiple.f90  tst_dict_overwrite.F90  tst_dict_overwrite.f90  (+21 more)
utils/: update_fypp.sh
